--- a/app/src/main/res/layout/fragment_instructions.xml
+++ b/app/src/main/res/layout/fragment_instructions.xml
@@ -139,6 +139,26 @@
                 android:text="@string/instructions_4" />
 
             <TextView
+                android:id="@+id/instructions5a"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="35dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginEnd="25dp"
+                android:lineSpacingExtra="3dp"
+                android:text="@string/instructions_4_a" />
+
+            <TextView
+                android:id="@+id/instructions5b"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="35dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginEnd="25dp"
+                android:lineSpacingExtra="3dp"
+                android:text="@string/instructions_4_b" />
+
+            <TextView
                 android:id="@+id/instructions5"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -149,36 +169,17 @@
                 android:text="@string/instructions_5" />
 
             <TextView
-                android:id="@+id/instructions5a"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="35dp"
-                android:layout_marginTop="10dp"
-                android:layout_marginEnd="25dp"
-                android:lineSpacingExtra="3dp"
-                android:text="@string/instructions_5_a" />
-
-            <TextView
-                android:id="@+id/instructions5b"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="35dp"
-                android:layout_marginTop="10dp"
-                android:layout_marginEnd="25dp"
-                android:lineSpacingExtra="3dp"
-                android:text="@string/instructions_5_b" />
-
-            <TextView
                 android:id="@+id/instructions6"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="25dp"
-                android:layout_marginTop="30dp"
-                android:textColor="@color/translucent_imp"
-                android:fontFamily="@font/poppins_500"
+                android:layout_marginTop="25dp"
                 android:layout_marginEnd="25dp"
+                android:fontFamily="@font/poppins_500"
                 android:lineSpacingExtra="3dp"
-                android:text="@string/instructions_6" />
+                android:text="@string/instructions_6"
+                android:textColor="@color/translucent_imp" />
+
 
             <TextView
                 android:id="@+id/instructions7"
@@ -186,12 +187,12 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="25dp"
                 android:layout_marginTop="12dp"
-                android:layout_marginBottom="10dp"
-                android:textColor="@color/translucent_imp"
-                android:fontFamily="@font/poppins_500"
                 android:layout_marginEnd="25dp"
+                android:layout_marginBottom="10dp"
+                android:fontFamily="@font/poppins_500"
                 android:lineSpacingExtra="3dp"
-                android:text="@string/instructions_7" />
+                android:text="@string/instructions_7"
+                android:textColor="@color/translucent_imp" />
 
         </LinearLayout>
     </ScrollView>
